--- a/product/Battlefield 1.html
+++ b/product/Battlefield 1.html
@@ -31,9 +31,9 @@
             <div class="header-menu">
                 <a id="category" class="pretty-anchor">Category</a>
                 <div class="sub-menu">
-                    <a href="#" class="pretty-anchor">Steam Games</a>
-                    <a href="#" class="pretty-anchor">Origin Games</a>
-                    <a href="#" class="pretty-anchor">Battle.net Games</a>
+                    <a href="../category/Steam.html" class="pretty-anchor">Steam Games</a>
+                    <a href="../category/Origin.html" class="pretty-anchor">Origin Games</a>
+                    <a href="../category/Battle.net.html" class="pretty-anchor">Battle.net Games</a>
                     <a href="#" class="pretty-anchor">Gift Cards</a>
                     <a href="#" class="pretty-anchor">Bundles</a>
                 </div>
@@ -73,9 +73,9 @@
     
         <!--Menu Bar (Desktop)-->
         <div class="menu-bar sticky">
-                <a href="#" class="pretty-anchor">Steam Games</a>
-                <a href="#" class="pretty-anchor">Origin Games</a>
-                <a href="#" class="pretty-anchor">Battle.net Games</a>
+            <a href="../category/Steam.html" class="pretty-anchor">Steam Games</a>
+            <a href="../category/Origin.html" class="pretty-anchor">Origin Games</a>
+            <a href="../category/Battle.net.html" class="pretty-anchor">Battle.net Games</a>
                 <a href="#" class="pretty-anchor">Gift Cards</a>
                 <a href="#" class="pretty-anchor">Bundles</a>
         </div>
