--- a/product/product.html
+++ b/product/product.html
@@ -38,7 +38,7 @@
                 </div>
                 <a href="#" class="pretty-anchor">Daily Deals</a>
                 <a href="../feedback/feed-back.html" class="pretty-anchor">Feedback</a>
-                <a class="purple-btn" href="../account/user-login.html">Login</a>
+                <a id="login-btn" class="purple-btn" href="../account/user-login.html">Login</a>
             </div>
     
             <!--Burger Menu Icon-->
