--- a/product/Battlefield 1.html
+++ b/product/Battlefield 1.html
@@ -230,17 +230,17 @@
             <!--Footer Menu-->
             <div id="footer-menu">
                 <a class="footer-option" href="../about_us/about_us.html">About Us</a>
-                <a class="footer-option" href="#">Support Center</a>
-                <a class="footer-option" href="#">Terms of Use</a>
-                <a class="footer-option" href="#">Privacy Policy</a>
-                <a class="footer-option" href="account/admin-login.html">Administrator</a>
-            </div>
-    
-            <!--Social Media Icon-->
-            <div id="social-media">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-google"></i></a>
-                <a href="#"><i class="fa fa-github"></i></a>
+            <a class="footer-option" href="../page-not-found.html">Support Center</a>
+            <a class="footer-option" href="../page-not-found.html">Terms of Use</a>
+            <a class="footer-option" href="../page-not-found.html">Privacy Policy</a>
+            <a class="footer-option" href="account/admin-login.html">Administrator</a>
+        </div>
+
+        <!--Social Media Icon-->
+        <div id="social-media">
+            <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.google.com/"><i class="fa fa-google"></i></a>
+            <a href="https://www.github.com/"><i class="fa fa-github"></i></a>
             </div>
     
             <!--Copyright Information-->
