Link admin login

--- a/account/admin-login.html
+++ b/account/admin-login.html
@@ -21,7 +21,7 @@
                   <div class="sign-in">
                   <button class="btn btn-lg btn-primary btn-block" type="submit" >Sign in</button>           
                   </div>
-                <a href="#" >Forgot password ? </a>
+                <a href="../page-not-found.html" >Forgot password ? </a>
               </form>
             </div>
 </body>
