--- a/account/create-account.html
+++ b/account/create-account.html
@@ -32,7 +32,7 @@
 
                   <label class="checkbox pull-left">  
                   <input type="checkbox" id="checkbox" id="term" name="term">
-                  I accept the<a href="#" > Terms of Use </a>  & <a href="#" >Privacy Policy </a>
+                  I accept the<a href="../page-not-found.html" > Terms of Use </a>  & <a href="../page-not-found.html" >Privacy Policy </a>
                   </label>
                   <div class="create-account">
                     <button id="submit-btn" class="btn btn-lg btn-success btn-block" type="submit">Sign Up</button>           
