--- a/account/user-login.html
+++ b/account/user-login.html
@@ -19,7 +19,7 @@
                   <a href="../index.html"><img class="logo" src="../images/gamehub.png"></a>
                   <input type="text" id="username" class="form-control" name="username" placeholder="Email Address" autofocus />   
                   <input type="password" id="password" class="form-control" name="password" placeholder="Password" /> 
-                  <a href="#" class="new-account">Need help? </a>
+                  <a href="../page-not-found.html" class="new-account">Need help? </a>
                   <label class="checkbox pull-left">  
                   <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"/> Remember me 
                   </label>
