--- a/product/Overwatch.html
+++ b/product/Overwatch.html
@@ -232,7 +232,7 @@
             <a class="footer-option" href="../page-not-found.html">Support Center</a>
             <a class="footer-option" href="../page-not-found.html">Terms of Use</a>
             <a class="footer-option" href="../page-not-found.html">Privacy Policy</a>
-            <a class="footer-option" href="account/admin-login.html">Administrator</a>
+            <a class="footer-option" href="../account/admin-login.html">Administrator</a>
         </div>
 
         <!--Social Media Icon-->
