Completed All Product

--- a/product/Tom Clancy's Ghost Recon® Wildlands.html
+++ b/product/Tom Clancy's Ghost Recon® Wildlands.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Farming Simulator 19</title>
+    <title>Tom Clancy's Ghost Recon® Wildlands</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
@@ -84,23 +84,23 @@
             <!--Product Image-->
             <div class="product-img-wrapper">
                 <div class="recent-img">
-                    <img src="images/fs.jpg">
+                    <img src="https://images4.alphacoders.com/629/629566.jpg">
                 </div>
                 <div class="img-wrapper">
-                    <img class="active" src="images/fs3.jpg">
-                    <img src="images/fs4.jpg">
-                    <img src="images/fs5.jpg">
-                    <img src="images/fs6.jpg">
+                    <img class="active" src="https://images7.alphacoders.com/601/601646.png">
+                    <img src="https://images3.alphacoders.com/601/601642.png">
+                    <img src="https://images8.alphacoders.com/601/601648.png">
+                    <img src="https://images6.alphacoders.com/601/601643.png">
                 </div>
             </div>
 
             <!--Product Name-->
-            <div class="product-name">Farming Simulator 19</div>
+            <div class="product-name">Tom Clancy's Ghost Recon® Wildlands</div>
 
             <div class="right-hand-side-wrapper"> <!--Right Hand Side Elements (Desktop)-->
                 <!--Product Genre-->
                 <div class="product-genre">Genre:
-                    <a class="small-btn" href="#">Simulator</a>
+                    <a class="small-btn" href="#">Action</a>     
                 </div>
 
                 <!--Product Supported Platform-->
@@ -109,7 +109,7 @@
                 </div>
 
                 <!--Product Price-->
-                <div class="product-price"><i class="fa fa-certificate"></i> 17.20$</div>
+                <div class="product-price"><i class="fa fa-certificate"></i> 50.07$</div>
                 
                 <!--Shopping Button-->
                 <div class="btn-wrapper">
@@ -126,8 +126,13 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Developer(s): Giants Software (2008-present)</li>
-                                <li>Publisher(s) : Focus Home </li>
+                                <li>Developer(s)   : Ubisoft Montreal</li>
+                                <li>Publisher(s)   : Ubisoft</li>
+                                <li>Director(s)                : Xavier Marquis</li>
+                                <li>Producer(s)     : Sébastien Labbé</li>
+                                <li>Designer(s)     : Daniel Drapeau</li>
+                                <li>Mode(s)            : Single-player, Multiplayer</li>
+
                             </ul>
                         </div>
                     </div>
@@ -139,8 +144,7 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Farming Simulator is a farming simulation video game series developed by Giants Software. The locations are based on American and European environments. Players are able to farm, breed livestock, grow crops and sell assets created from farming.</li>
-                                <li>The games have sold over fifteen million copies combined. </li>
+                                <li>Tom Clancy's Ghost Recon Wildlands is an open world, tactical shooter utilizing a third person perspective. The game will not feature the futuristic setting used in Advanced Warfighter and Future Soldier, but will instead adopt a modern-day setting, similar to the original Tom Clancy's Ghost Recon. As a result, the equipment featured in the game will be based on weapons and gear commonly used by military forces around the world. </li>
                             </ul>
                          </div>
                     </div>
@@ -152,8 +156,11 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>OS:  Windows 7, Windows 8.1 , Windows 10</li>
-                                <li>Memory: 2 GB RAM</li>
+                                <li>OS:Windows 7, Windows 8.1, Windows 10 (64 bit versions required)</li>
+                                <li>Processor: : Intel Core i3 560 @ 3.3 GHz or AMD Phenom II X4 945 @ 3.0 GHz</li>
+                                <li>Memory: 6 GB RAM</li>
+                                <li>Graphics: NVIDIA GeForce GTX 460 or AMD Radeon HD 5870 (DirectX-11 compliant with 1GB of VRAM)</li>
+                                <li>Storage: 30 GB available space</li>
                             </ul>
                         </div>
                     </div>
@@ -164,48 +171,48 @@
             <div id="related-product-title" class="title"><i class="fa fa-share"></i> Related Products</div>
             <div class="related-product-wrapper">
                 <div class="related-product-container">
-                    <a class="related-product pretty-anchor" href="Minecraft.html">
-                        <img src="https://images7.alphacoders.com/370/370408.png   ">
-                        <div class="related-product-name">Minecraft</div>
-                        <div class="related-product-price">29.95$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="Tom Clancy's Rainbow Six Siege.html">
+                        <img src="https://images7.alphacoders.com/521/521305.png">
+                        <div class="related-product-name">Tom Clancy's Rainbow Six Siege</div>
+                        <div class="related-product-price">10.07$<sup></sup></div>
                     </a>
-                    <a class="related-product pretty-anchor" href="PlayerUnknown's Battlegrounds.html">
-                            <img src="..\product\images\pubg.jpg">
-                            <div class="related-product-name">PlayerUnknown's Battlegrounds</div>
-                            <div class="related-product-price">14.62$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="GTA_V.html">
+                            <img src="..\product\images\cc.jpg">
+                            <div class="related-product-name">Grand Theft Auto V</div>
+                            <div class="related-product-price">29.99$<sup></sup></div>
                     </a>
-                    <a class="related-product pretty-anchor" href="Battlefield 1.html">
-                            <img src="https://images5.alphacoders.com/699/699115.jpg">
-                            <div class="related-product-name">Battlefield 1</div>
-                            <div class="related-product-price">12.59$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="The Witcher 3 Wild Hunt.html">
+                            <img src="https://images8.alphacoders.com/596/596901.jpg">
+                            <div class="related-product-name">The Witcher 3 Wild Hunt </div>
+                            <div class="related-product-price">39.99$<sup></sup></div>
                     </a>
-                    <a class="related-product pretty-anchor" href="Rocket League.html">
-                            <img src="https://images7.alphacoders.com/863/863540.jpg">
-                            <div class="related-product-name">Rocket League</div>
-                            <div class="related-product-price">8.08$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="Red Dead Redemption 2.html">
+                            <img src="https://images6.alphacoders.com/749/749806.png">
+                            <div class="related-product-name">Red Dead Redemption 2</div>
+                            <div class="related-product-price">59.99$<sup></sup></div>
                     </a>
                 </div>
             </div>
             <div class="related-product-card-container">
-                <a class="product-card" href="Minecraft.html">
-                        <img src="images/mc.jpg">
-                        <div class="content-product-name">Minecraft </div>
-                        <div class="content-product-price">29.95$ <sup></sup></div>
+                <a class="product-card" href="Tom Clancy's Rainbow Six Siege.html">
+                        <img src="images/tc.jpg">
+                        <div class="content-product-name">Tom Clancy's Rainbow Six Siege</div>
+                        <div class="content-product-price">10.07$ <sup></sup></div>
                 </a>
-                <a class="product-card" href="PlayerUnknown's Battlegrounds.html">
-                        <img src="..\product\images\rsz_pubg.jpg">
-                        <div class="content-product-name">PlayerUnknown's Battlegrounds</div>
-                        <div class="content-product-price">14.62$ <sup></sup></div>
+                <a class="product-card" href="GTA_V.html">
+                        <img src="images/gtav.jpg">
+                        <div class="content-product-name">Grand Theft Auto V</div>
+                        <div class="content-product-price">29.99$ <sup></sup></div>
                 </a>
-                <a class="product-card" href="Battlefield 1.html">
-                        <img src="..\product\images\rsz_battle_field_1.jpg">
-                        <div class="content-product-name">Battle field 1</div>
-                        <div class="content-product-price">12.59$ <sup></sup></div>
+                <a class="product-card" href="The Witcher 3 Wild Hunt.html">
+                        <img src="images/tw.jpg">
+                        <div class="content-product-name">The Witcher 3 Wild Hunt </div>
+                        <div class="content-product-price">39.99$ <sup></sup></div>
                 </a>
-                <a class="product-card" href="Rocket League.html">
-                        <img src="https://cdn02.nintendo-europe.com/media/images/11_square_images/games_18/nintendo_switch_download_software/SQ_NSwitchDS_RocketLeague.jpg">
-                        <div class="content-product-name">Rocket League</div>
-                        <div class="content-product-price">8.08$ <sup></sup></div>
+                <a class="product-card" href="Red Dead Redemption 2.html">
+                        <img src="images/red-dead-2.jpg">
+                        <div class="content-product-name">Red Dead Redemption 2</div>
+                        <div class="content-product-price">59.99$ <sup></sup></div>
                 </a>
             </div>
         </div>
