--- a/product/Friday the 13th.html
+++ b/product/Friday the 13th.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Farming Simulator 19</title>
+    <title>Friday the 13th</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
@@ -44,7 +44,7 @@
             <!--Burger Menu Icon-->
             <div class="burger-menu-icon">
                 <div class="burger"></div>  
-              </div>
+            </div>
     
             <!--Website Logo-->
             <div class="logo">
@@ -84,23 +84,23 @@
             <!--Product Image-->
             <div class="product-img-wrapper">
                 <div class="recent-img">
-                    <img src="images/fs.jpg">
+                    <img src="images/fiday3.jpg">
                 </div>
                 <div class="img-wrapper">
-                    <img class="active" src="images/fs3.jpg">
-                    <img src="images/fs4.jpg">
-                    <img src="images/fs5.jpg">
-                    <img src="images/fs6.jpg">
+                    <img class="active" src="https://images.alphacoders.com/440/440924.jpg">
+                    <img src="https://images5.alphacoders.com/442/442589.jpg">
+                    <img src="https://images7.alphacoders.com/321/321944.jpg">
+                    <img src="https://images6.alphacoders.com/650/650610.jpg">
                 </div>
             </div>
 
             <!--Product Name-->
-            <div class="product-name">Farming Simulator 19</div>
+            <div class="product-name">Friday the 13th</div>
 
             <div class="right-hand-side-wrapper"> <!--Right Hand Side Elements (Desktop)-->
                 <!--Product Genre-->
                 <div class="product-genre">Genre:
-                    <a class="small-btn" href="#">Simulator</a>
+                    <a class="small-btn" href="#">Action</a>
                 </div>
 
                 <!--Product Supported Platform-->
@@ -109,7 +109,7 @@
                 </div>
 
                 <!--Product Price-->
-                <div class="product-price"><i class="fa fa-certificate"></i> 17.20$</div>
+                <div class="product-price"><i class="fa fa-certificate"></i> 19.95$</div>
                 
                 <!--Shopping Button-->
                 <div class="btn-wrapper">
@@ -126,8 +126,7 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Developer(s): Giants Software (2008-present)</li>
-                                <li>Publisher(s) : Focus Home </li>
+                                <li>None</li>
                             </ul>
                         </div>
                     </div>
@@ -139,10 +138,9 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Farming Simulator is a farming simulation video game series developed by Giants Software. The locations are based on American and European environments. Players are able to farm, breed livestock, grow crops and sell assets created from farming.</li>
-                                <li>The games have sold over fifteen million copies combined. </li>
+                                <li>None</li>
                             </ul>
-                         </div>
+                        </div>
                     </div>
                 </div>
 
@@ -164,10 +162,10 @@
             <div id="related-product-title" class="title"><i class="fa fa-share"></i> Related Products</div>
             <div class="related-product-wrapper">
                 <div class="related-product-container">
-                    <a class="related-product pretty-anchor" href="Minecraft.html">
-                        <img src="https://images7.alphacoders.com/370/370408.png   ">
-                        <div class="related-product-name">Minecraft</div>
-                        <div class="related-product-price">29.95$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="Farming Simulator 19.html">
+                        <img src="images/fs.jpg">
+                        <div class="related-product-name">Farming Simulator 19  </div>
+                        <div class="related-product-price">17.20$<sup></sup></div>
                     </a>
                     <a class="related-product pretty-anchor" href="PlayerUnknown's Battlegrounds.html">
                             <img src="..\product\images\pubg.jpg">
@@ -187,10 +185,10 @@
                 </div>
             </div>
             <div class="related-product-card-container">
-                <a class="product-card" href="Minecraft.html">
-                        <img src="images/mc.jpg">
-                        <div class="content-product-name">Minecraft </div>
-                        <div class="content-product-price">29.95$ <sup></sup></div>
+                <a class="product-card" href="Farming Simulator 19.html">
+                        <img src="images/fs2.jpg">
+                        <div class="content-product-name">Farming Simulator 19  </div>
+                        <div class="content-product-price">17.20$ <sup></sup></div>
                 </a>
                 <a class="product-card" href="PlayerUnknown's Battlegrounds.html">
                         <img src="..\product\images\rsz_pubg.jpg">
