--- a/product/World War 3.html
+++ b/product/World War 3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Farming Simulator 19</title>
+    <title>World War 3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
@@ -84,23 +84,23 @@
             <!--Product Image-->
             <div class="product-img-wrapper">
                 <div class="recent-img">
-                    <img src="images/fs.jpg">
+                    <img src="https://images.alphacoders.com/923/923541.jpg">
                 </div>
                 <div class="img-wrapper">
-                    <img class="active" src="images/fs3.jpg">
-                    <img src="images/fs4.jpg">
-                    <img src="images/fs5.jpg">
-                    <img src="images/fs6.jpg">
+                    <img class="active" src="https://images8.alphacoders.com/923/923535.jpg">
+                    <img src="https://images8.alphacoders.com/923/923539.jpg">
+                    <img src="https://images7.alphacoders.com/923/923536.jpg">
+                    <img src="https://images2.alphacoders.com/923/923534.jpg">
                 </div>
             </div>
 
             <!--Product Name-->
-            <div class="product-name">Farming Simulator 19</div>
+            <div class="product-name">World War 3</div>
 
             <div class="right-hand-side-wrapper"> <!--Right Hand Side Elements (Desktop)-->
                 <!--Product Genre-->
                 <div class="product-genre">Genre:
-                    <a class="small-btn" href="#">Simulator</a>
+                    <a class="small-btn" href="#">Action</a>
                 </div>
 
                 <!--Product Supported Platform-->
@@ -109,7 +109,7 @@
                 </div>
 
                 <!--Product Price-->
-                <div class="product-price"><i class="fa fa-certificate"></i> 17.20$</div>
+                <div class="product-price"><i class="fa fa-certificate"></i> 14.19$</div>
                 
                 <!--Shopping Button-->
                 <div class="btn-wrapper">
@@ -126,8 +126,8 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Developer(s): Giants Software (2008-present)</li>
-                                <li>Publisher(s) : Focus Home </li>
+                                <li>none</li>
+
                             </ul>
                         </div>
                     </div>
@@ -139,8 +139,7 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Farming Simulator is a farming simulation video game series developed by Giants Software. The locations are based on American and European environments. Players are able to farm, breed livestock, grow crops and sell assets created from farming.</li>
-                                <li>The games have sold over fifteen million copies combined. </li>
+                                <li>none</li>
                             </ul>
                          </div>
                     </div>
@@ -152,8 +151,11 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>OS:  Windows 7, Windows 8.1 , Windows 10</li>
+                                <li>OS: Windows 7/Vista/XP</li>
+                                <li>Processor: Intel Core Duo 6600  hoặc AMD Phenom X3 8750</li>
                                 <li>Memory: 2 GB RAM</li>
+                                <li>Graphics: NVIDIA 9800 GT 1GB / AMD HD 4870 1GB (DX 10, 10.1, 11)</li>
+                                <li>Storage: 15 GB available space</li>
                             </ul>
                         </div>
                     </div>
@@ -164,48 +166,48 @@
             <div id="related-product-title" class="title"><i class="fa fa-share"></i> Related Products</div>
             <div class="related-product-wrapper">
                 <div class="related-product-container">
-                    <a class="related-product pretty-anchor" href="Minecraft.html">
-                        <img src="https://images7.alphacoders.com/370/370408.png   ">
-                        <div class="related-product-name">Minecraft</div>
-                        <div class="related-product-price">29.95$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="GTA_IV.html">
+                        <img src="..\product\images\gta-iv.jpg">
+                        <div class="related-product-name">Grand Theft Auto IV </div>
+                        <div class="related-product-price">19.99$<sup></sup></div>
+                    </a>
+                    <a class="related-product pretty-anchor" href="GTA_V.html">
+                            <img src="..\product\images\cc.jpg">
+                            <div class="related-product-name">Grand Theft Auto V</div>
+                            <div class="related-product-price">29.99$<sup></sup></div>
                     </a>
                     <a class="related-product pretty-anchor" href="PlayerUnknown's Battlegrounds.html">
                             <img src="..\product\images\pubg.jpg">
                             <div class="related-product-name">PlayerUnknown's Battlegrounds</div>
                             <div class="related-product-price">14.62$<sup></sup></div>
                     </a>
-                    <a class="related-product pretty-anchor" href="Battlefield 1.html">
-                            <img src="https://images5.alphacoders.com/699/699115.jpg">
-                            <div class="related-product-name">Battlefield 1</div>
-                            <div class="related-product-price">12.59$<sup></sup></div>
-                    </a>
-                    <a class="related-product pretty-anchor" href="Rocket League.html">
-                            <img src="https://images7.alphacoders.com/863/863540.jpg">
-                            <div class="related-product-name">Rocket League</div>
-                            <div class="related-product-price">8.08$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="Overwatch.html">
+                            <img src="https://images5.alphacoders.com/690/690653.png">
+                            <div class="related-product-name">Overwatch</div>
+                            <div class="related-product-price">39.99$<sup></sup></div>
                     </a>
                 </div>
             </div>
             <div class="related-product-card-container">
-                <a class="product-card" href="Minecraft.html">
-                        <img src="images/mc.jpg">
-                        <div class="content-product-name">Minecraft </div>
-                        <div class="content-product-price">29.95$ <sup></sup></div>
+                <a class="product-card" href="GTA_IV.html">
+                        <img src="..\product\images\rsz_12gta-iv.jpg">
+                        <div class="content-product-name">Grand Theft Auto IV</div>
+                        <div class="content-product-price">19.99$ <sup></sup></div>
+                </a>
+                <a class="product-card" href="GTA_V.html">
+                        <img src="images/gtav.jpg">
+                        <div class="content-product-name">Grand Theft Auto V</div>
+                        <div class="content-product-price">29.99$ <sup></sup></div>
                 </a>
                 <a class="product-card" href="PlayerUnknown's Battlegrounds.html">
                         <img src="..\product\images\rsz_pubg.jpg">
                         <div class="content-product-name">PlayerUnknown's Battlegrounds</div>
                         <div class="content-product-price">14.62$ <sup></sup></div>
                 </a>
-                <a class="product-card" href="Battlefield 1.html">
-                        <img src="..\product\images\rsz_battle_field_1.jpg">
-                        <div class="content-product-name">Battle field 1</div>
-                        <div class="content-product-price">12.59$ <sup></sup></div>
-                </a>
-                <a class="product-card" href="Rocket League.html">
-                        <img src="https://cdn02.nintendo-europe.com/media/images/11_square_images/games_18/nintendo_switch_download_software/SQ_NSwitchDS_RocketLeague.jpg">
-                        <div class="content-product-name">Rocket League</div>
-                        <div class="content-product-price">8.08$ <sup></sup></div>
+                <a class="product-card" href="Overwatch.html">
+                        <img src="images/ow.jpg">
+                        <div class="content-product-name">Overwatch</div>
+                        <div class="content-product-price">39.99$ <sup></sup></div>
                 </a>
             </div>
         </div>
