Linked about-us

--- a/product/Tropico 6.html
+++ b/product/Tropico 6.html
@@ -44,7 +44,7 @@
             <!--Burger Menu Icon-->
             <div class="burger-menu-icon">
                 <div class="burger"></div>  
-              </div>
+            </div>
     
             <!--Website Logo-->
             <div class="logo">
@@ -224,7 +224,7 @@
     
             <!--Footer Menu-->
             <div id="footer-menu">
-                <a class="footer-option" href="../about_us/about_us.html">About Us</a>
+                <a class="footer-option" href="../about-us/about-us.html">About Us</a>
                 <a class="footer-option" href="#">Support Center</a>
                 <a class="footer-option" href="#">Terms of Use</a>
                 <a class="footer-option" href="#">Privacy Policy</a>
