--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
         <!--Footer Menu-->
         <div id="footer-menu">
-            <a class="footer-option" href="about_us/about_us.html">About Us</a>
+            <a class="footer-option" href="about-us/about-us.html">About Us</a>
             <a class="footer-option" href="#">Support Center</a>
             <a class="footer-option" href="#">Terms of Use</a>
             <a class="footer-option" href="#">Privacy Policy</a>
