--- a/shopping-cart/shopping-cart.html
+++ b/shopping-cart/shopping-cart.html
@@ -197,7 +197,7 @@
 
         <!--Footer Menu-->
         <div id="footer-menu">
-            <a class="footer-option" href="#">About Us</a>
+            <a class="footer-option" href="../about-us/about-us.html">About Us</a>
             <a class="footer-option" href="#">Support Center</a>
             <a class="footer-option" href="#">Terms of Use</a>
             <a class="footer-option" href="#">Privacy Policy</a>
