--- a/admin/remove-game.html
+++ b/admin/remove-game.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/remove-product.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/new-orders.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/burger-menu.css" />
@@ -77,44 +77,22 @@
     </header>
     <div class="body">
             <div class="list">
-                <a class="list-box main" href="dashboard.html">Dashboard</a>
+                <a class="list-box" href="dashboard.html">Dashboard</a>
                 <a class="list-box" href="add-game.html">Add Product</a>
-                <a class="list-box" href="remove-game.html">Remove/<br>Edit Product</a>
+                <a class="list-box main" href="remove-game.html">Remove/<br>Edit Product</a>
                 <a class="list-box" href="#">Orders</a>
-                </div>
+            </div>
             <div class="info">
-                <div class="sale-dashboard-wrapper">
-                    <div class="sale-dashboard-title">
-                        Sales Dashboard
-                    </div>
-                    <div class="sale-dashboard">
-                        <div class="dashboard-box">
-                            <div class="dashboard-text">PRODUCTS SOLD</div>
-                            <div class="dashboard-number">65</div>
-                        </div>
-                        <div class="dashboard-box">
-                            <div class="dashboard-text">GROSS PROFIT</div>
-                            <div class="dashboard-number">$126</div>
-                        </div>
-                        <div class="dashboard-box">
-                            <div class="dashboard-text">NEW CUSTOMER</div>
-                            <div class="dashboard-number">35</div>
-                        </div>
-                        
-                        
-                    </div>
+               <div class="remove-product-title">Remove Product
+                    <a href="remove-game.html" class="button game main-btn">Game</a>
+                <a href="remove-card.html" class="button card">Card</a>
+               </div>
+               <div class="table-wrapper">
+                    <iframe src="list/games-list.html" frameBorder="0" border-radius= "17px" height="100%" width="100%"></iframe>
                 </div>
-                 <div class="new-orders">
-                        <div class="sale-dashboard-title">
-                                New Orders
-                            </div>
-                        <div class="table-wrapper">
-                            <iframe src="list/new-orders.html" height="100%" width="100%" frameBorder="0"></iframe>
-                        </div>
-                 </div>
+             </div>
             </div>
          </div>
-    </div>
     <!--Footer-->
 
 </body>
