Add edit function'

--- a/admin/add-game.html
+++ b/admin/add-game.html
@@ -77,14 +77,14 @@
     </header>
     <div class="body">
             <div class="list">
-                <a class="list-box" href="dashboard.html">Dashboard</a>
+                <a class="list-box" href="dashboard-game.html">Dashboard</a>
                 <a class="list-box main" href="add-game.html">Add Product</a>
                 <a class="list-box" href="remove-game.html">Remove/<br>Edit Product</a>
                 <a class="list-box" href="#">Orders</a>
             </div>
             <div class="info">
                <div class="add-product-title"> 
-                Choose product to add: 
+               Add Product
                 <a href="add-game.html" class="button game main-btn">Game</a>
                 <a href="add-card.html" class="button card">Card</a>
             </div>
