--- a/admin/dashboard-game.html
+++ b/admin/dashboard-game.html
@@ -77,7 +77,7 @@
     </header>
     <div class="body">
             <div class="list">
-                <a class="list-box main" href="dashboard.html">Dashboard</a>
+                <a class="list-box main" href="dashboard-game.html">Dashboard</a>
                 <a class="list-box" href="add-game.html">Add Product</a>
                 <a class="list-box" href="remove-game.html">Remove/<br>Edit Product</a>
                 <a class="list-box" href="#">Orders</a>
@@ -86,6 +86,8 @@
                 <div class="sale-dashboard-wrapper">
                     <div class="sale-dashboard-title">
                         Sales Dashboard
+                        <a href="dashboard-game.html" class="button game main-btn">Game</a>
+                        <a href="dashboard-card.html" class="button card">Card</a>
                     </div>
                     <div class="sale-dashboard">
                         <div class="dashboard-box">
@@ -97,7 +99,7 @@
                             <div class="dashboard-number">$126</div>
                         </div>
                         <div class="dashboard-box">
-                            <div class="dashboard-text">NEW CUSTOMER</div>
+                            <div class="dashboard-text">NEW CUSTOMERS</div>
                             <div class="dashboard-number">35</div>
                         </div>
                         
