--- a/admin/list/cards-list.html
+++ b/admin/list/cards-list.html
@@ -39,7 +39,7 @@
             <td>31/12/2019</td>
             <td>15</td>
             <td>$9.95</td>
-            <td><a href="#" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
+            <td><a href="../edit-card.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
             <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
@@ -52,7 +52,7 @@
             <td>31/12/2019</td>
             <td>15</td>
             <td>$9.95</td>
-            <td><a href="#" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
+            <td><a href="../edit-card.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
             <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
@@ -65,7 +65,7 @@
               <td>31/12/2019</td>
               <td>15</td>
               <td>$9.95</td>
-              <td><a href="#" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
+              <td><a href="../edit-card.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
               <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
@@ -78,7 +78,7 @@
               <td>31/12/2019</td>
               <td>15</td>
               <td>$9.95</td>
-              <td><a href="#" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
+              <td><a href="../edit-card.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
               <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
           </tr>
           <tr>
@@ -91,7 +91,7 @@
               <td>31/12/2019</td>
               <td>15</td>
               <td>$9.95</td>
-              <td><a href="#" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
+              <td><a href="../edit-card.html" ><button type="button" class="btn btn-warning" hre>Edit</button></a></td>
               <td><input type="text" size="1"><input type="submit" class="submit-btn" value="Delete"/></td>
 
         </tbody>
