--- a/admin/list/new-orders.html
+++ b/admin/list/new-orders.html
@@ -16,7 +16,6 @@
         <thead>
           <tr>
             <th scope="col">Receipt ID</th>
-            <th scope="col">Product</th>
             <th scope="col">Price</th>
             <th scope="col">Payment</th>
             <th scope="col">Customer info</th>
@@ -27,7 +26,6 @@
         <tbody>
           <tr>
             <th scope="row">001</th>
-            <td>The Forest</td>
             <td>$15.00</td>
             <td>Credits card</td>
             <td>Vu Nguyen</td>
@@ -36,7 +34,46 @@
           </tr>
           <tr>
             <th scope="row">002</th>
-            <td>The Forest</td>
+            <td>$35.00</td>
+            <td>MOMO</td>
+            <td>Tuan Nguyen</td>
+            <td>25/12/2018 19:50:12</td>
+            <td>Processing</td>
+          </tr>
+          <tr>
+            <th scope="row">003</th>
+            <td>$25.00</td>
+            <td>ACB debits card</td>
+            <td>Tri Phan</td>
+            <td>25/12/2018 19:42:42</td>
+            <td>On list</td>
+          </tr>
+          <tr>
+            <th scope="row">004</th>
+            <td>$42.00</td>
+            <td>Credits card</td>
+            <td>Bao Nguyen</td>
+            <td>25/12/2018 18:12:12</td>
+            <td>On list</td>
+          </tr>
+          <tr>
+            <th scope="row">005</th>
+            <td>$15.00</td>
+            <td>Credits card</td>
+            <td>Vu Nguyen</td>
+            <td>25/12/2018 19:52:12</td>
+            <td>On list</td>
+          </tr>
+          <tr>
+              <th scope="row">006</th>
+              <td>$35.00</td>
+              <td>MOMO</td>
+              <td>Tuan Nguyen</td>
+              <td>25/12/2018 19:50:12</td>
+              <td>Processing</td>
+          </tr>
+          <tr>
+            <th scope="row">007</th>
             <td>$15.00</td>
             <td>Credits card</td>
             <td>Vu Nguyen</td>
@@ -44,53 +81,7 @@
             <td>Processing</td>
           </tr>
           <tr>
-            <th scope="row">003</th>
-            <td>The Forest</td>
-            <td>$15.00</td>
-            <td>Credits card</td>
-            <td>Vu Nguyen</td>
-            <td>25/12/2018 19:52:12</td>
-            <td>Processing</td>
-          </tr>
-          <tr>
-            <th scope="row">003</th>
-            <td>The Forest</td>
-            <td>$15.00</td>
-            <td>Credits card</td>
-            <td>Vu Nguyen</td>
-            <td>25/12/2018 19:52:12</td>
-            <td>Processing</td>
-          </tr>
-          <tr>
-            <th scope="row">003</th>
-            <td>The Forest</td>
-            <td>$15.00</td>
-            <td>Credits card</td>
-            <td>Vu Nguyen</td>
-            <td>25/12/2018 19:52:12</td>
-            <td>Processing</td>
-          </tr>
-          <tr>
-            <th scope="row">003</th>
-            <td>The Forest</td>
-            <td>$15.00</td>
-            <td>Credits card</td>
-            <td>Vu Nguyen</td>
-            <td>25/12/2018 19:52:12</td>
-            <td>Processing</td>
-          </tr>
-          <tr>
-            <th scope="row">003</th>
-            <td>The Forest</td>
-            <td>$15.00</td>
-            <td>Credits card</td>
-            <td>Vu Nguyen</td>
-            <td>25/12/2018 19:52:12</td>
-            <td>Processing</td>
-          </tr>
-          <tr>
-            <th scope="row">003</th>
-            <td>The Forest</td>
+            <th scope="row">008</th>
             <td>$15.00</td>
             <td>Credits card</td>
             <td>Vu Nguyen</td>
