Done edit, remove, dashboard, add on Admin page

--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../style/common-style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/style.css" />
     <script src="main.js"></script>
+    
 </head>
 <body> 
     <div class="title-about">
         <i class="fas fa-user-circle"></i>
         About Us
     </div>
+    <div class="wrapper">
     <div class="team-box">
         <div class="team-body">
             <div class="pic" > 
@@ -25,13 +27,11 @@
                 Phan Dung Tri 
             </div>
             <div class="info-member">
-                <div class="info-icon"><i class="fas fa-info"> INFO</i></div>
                 <ul>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
+                    <li>work at Gamehub since 2010</li>
+                    <li>19 years old</li>
+                    <li>Loves C++,Java, Making a game</li>
+                    <li>Favorites movie: How I met your mother</li>
                 </ul>
             </div>
             <div class="logo">
@@ -48,13 +48,12 @@
                 Nguyen Quoc Vu 
             </div>
             <div class="info-member">
-                <div class="info-icon"><i class="fas fa-info"> INFO</i></div>
+            
                 <ul>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
+                    <li>work at Gamehub since 2010</li>
+                    <li>19 years old</li>
+                    <li>Loves C++,Java, Making a game</li>
+                    <li>Favorites movie: How I met your mother</li>
                 </ul>
             </div>
             <div class="logo">
@@ -71,13 +70,11 @@
                 Nguyen Duc Anh Tuan  
             </div>
             <div class="info-member">
-                <div class="info-icon"><i class="fas fa-info"> INFO</i></div>
                 <ul>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
-                    <li>asdsadsadsadas</li>
+                    <li>work at Gamehub since 2010</li>
+                    <li>19 years old</li>
+                    <li>Loves C++,Java, Making a game</li>
+                    <li>Favorites movie: How I met your mother</li>
                 </ul>
             </div>
             <div class="logo">
@@ -87,5 +84,7 @@
             </div>
         </div>
     </div>
+    <div class="back-home"><a href="../index.html">Back home</a></div>
+</div>
 </body>
 </html>
