--- a/admin/dashboard-game.html
+++ b/admin/dashboard-game.html
@@ -111,7 +111,7 @@
                                 New Orders
                             </div>
                         <div class="table-wrapper">
-                            <iframe src="list/new-orders.html" height="100%" width="100%" frameBorder="0"></iframe>
+                            <iframe src="list/new-orders-game.html" height="100%" width="100%" frameBorder="0"></iframe>
                         </div>
                  </div>
             </div>
