--- a/admin/remove-card.html
+++ b/admin/remove-card.html
@@ -77,7 +77,7 @@
     </header>
     <div class="body">
             <div class="list">
-                <a class="list-box" href="dashboard.html">Dashboard</a>
+                <a class="list-box" href="dashboard-game.html">Dashboard</a>
                 <a class="list-box" href="add-game.html">Add Product</a>
                 <a class="list-box main" href="remove-game.html">Remove/<br>Edit Product</a>
                 <a class="list-box" href="#">Orders</a>
