--- a/product/Call Of Cthulhu.html
+++ b/product/Call Of Cthulhu.html
@@ -28,7 +28,7 @@
     <!--Header--> 
         <header class="sticky">
             <!--Header Menu-->
-            <<div class="header-menu">
+            <div class="header-menu">
                 <a id="category" class="pretty-anchor">Category</a>
                 <div class="sub-menu">
                     <a href="../category/Steam.html" class="pretty-anchor">Steam Games</a>
