--- a/account/admin-login.html
+++ b/account/admin-login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <div class="wrapper">
-                <form class="form-signin" action="../admin/admin.html">   
+                <form class="form-signin" action="../admin/dashboard-game.html">   
                   <a href="#"><img class="logo" src="images/gamehub_adminlogin.png" href="#" ></a>
                   <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />   
                   <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
