--- a/admin/list/new-orders-game.html
+++ b/admin/list/new-orders-game.html
@@ -21,6 +21,7 @@
             <th scope="col">Customer info</th>
             <th scope="col">Time</th>
             <th scope="col">State</th>
+            <th scope="col"></th> 
           </tr>
         </thead>
         <tbody>
@@ -31,6 +32,7 @@
             <td>Vu Nguyen</td>
             <td>25/12/2018 19:52:12</td>
             <td>Processing</td>
+            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">002</th>
@@ -39,6 +41,7 @@
             <td>Tuan Nguyen</td>
             <td>25/12/2018 19:50:12</td>
             <td>Processing</td>
+            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">003</th>
@@ -47,6 +50,7 @@
             <td>Tri Phan</td>
             <td>25/12/2018 19:42:42</td>
             <td>On list</td>
+            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">004</th>
@@ -55,6 +59,7 @@
             <td>Bao Nguyen</td>
             <td>25/12/2018 18:12:12</td>
             <td>On list</td>
+            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">005</th>
@@ -63,6 +68,7 @@
             <td>Vu Nguyen</td>
             <td>25/12/2018 19:52:12</td>
             <td>On list</td>
+            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
               <th scope="row">006</th>
@@ -71,6 +77,7 @@
               <td>Tuan Nguyen</td>
               <td>25/12/2018 19:50:12</td>
               <td>Processing</td>
+              <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">007</th>
@@ -79,6 +86,7 @@
             <td>Vu Nguyen</td>
             <td>25/12/2018 19:52:12</td>
             <td>Processing</td>
+            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">008</th>
@@ -87,6 +95,7 @@
             <td>Vu Nguyen</td>
             <td>25/12/2018 19:52:12</td>
             <td>Processing</td>
+            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
         </tbody>
       </table>
