--- a/product/Monster Hunter World.html
+++ b/product/Monster Hunter World.html
@@ -59,7 +59,7 @@
             <div class="search-bar-wrapper">
                 <div class="search-bar">
                     <input type="text" class="search-term" placeholder="What are you looking for?">
-                    <button type="submit" class="search-btn purple-btn"><i class="fa fa-search"></i></button>  
+                    <button type="submit" onclick = "location.href = '../product/Fallout 76.html'" class="search-btn purple-btn"><i class="fa fa-search"></i></button>  
                 </div>
             </div>
     
