--- a/sale-off/black-friday.html
+++ b/sale-off/black-friday.html
@@ -36,15 +36,13 @@
         <div class="header-menu">
             <a id="category" class="pretty-anchor">Category</a>
             <div class="sub-menu">
-                <a href="#" class="pretty-anchor">Steam Games</a>
-                <a href="#" class="pretty-anchor">Origin Games</a>
-                <a href="#" class="pretty-anchor">Battle.net Games</a>
-                <a href="#" class="pretty-anchor">Gift Cards</a>
-                <a href="#" class="pretty-anchor">Bundles</a>
+                <a href="../category/Steam.html" class="pretty-anchor">Steam Games</a>
+            <a href="../category/Origin.html" class="pretty-anchor">Origin Games</a>
+            <a href="../category/Battle.net.html" class="pretty-anchor">Battle.net Games</a>
             </div>
             <a href="#" class="pretty-anchor">Daily Deals</a>
             <a href="../feedback/feed-back.html" class="pretty-anchor">Feedback</a>
-            <a class="purple-btn" href="../account/user-login.html">Login</a>
+            <a id="login-btn" class="purple-btn" href="../account/user-login.html">Login</a>
         </div>
 
         <!--Burger Menu Icon-->
@@ -66,7 +64,7 @@
         <div class="search-bar-wrapper">
             <div class="search-bar">
                 <input type="text" class="search-term" placeholder="What are you looking for?">
-                <button type="submit" class="search-btn purple-btn"><i class="fa fa-search"></i></button>  
+                <button type="submit" onclick = "location.href = '../product/Fallout 76.html'" class="search-btn purple-btn"><i class="fa fa-search"></i></button>  
             </div>
         </div>
 
@@ -78,11 +76,9 @@
 
     <!--Menu Bar (Desktop)-->
     <div class="menu-bar sticky">
-            <a href="#" class="pretty-anchor">Steam Games</a>
-            <a href="#" class="pretty-anchor">Origin Games</a>
-            <a href="#" class="pretty-anchor">Battle.net Games</a>
-            <a href="#" class="pretty-anchor">Gift Cards</a>
-            <a href="#" class="pretty-anchor">Bundles</a>
+        <a href="../category/Steam.html" class="pretty-anchor">Steam Games</a>
+        <a href="../category/Origin.html" class="pretty-anchor">Origin Games</a>
+        <a href="../category/Battle.net.html" class="pretty-anchor">Battle.net Games</a>
     </div>
 
     <div class="body">
@@ -159,20 +155,19 @@
 
         <!--Footer Menu-->
         <div id="footer-menu">
-            <a class="footer-option" href="../about-us/about-us.html">About Us</a>
-            <a class="footer-option" href="#">Support Center</a>
-            <a class="footer-option" href="#">Terms of Use</a>
-            <a class="footer-option" href="#">Privacy Policy</a>
-            <a class="footer-option" href="account/admin-login.html">Administrator</a>
-        </div>
+            <a class="footer-option" href="../about_us/about_us.html">About Us</a>
+        <a class="footer-option" href="../page-not-found.html">Support Center</a>
+        <a class="footer-option" href="../page-not-found.html">Terms of Use</a>
+        <a class="footer-option" href="../page-not-found.html">Privacy Policy</a>
+        <a class="footer-option" href="../account/admin-login.html">Administrator</a>
+    </div>
 
-        <!--Social Media Icon-->
-        <div id="social-media">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-google"></i></a>
-            <a href="#"><i class="fa fa-github"></i></a>
+    <!--Social Media Icon-->
+    <div id="social-media">
+        <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.google.com/"><i class="fa fa-google"></i></a>
+        <a href="https://www.github.com/"><i class="fa fa-github"></i></a>
         </div>
-
         <!--Copyright Information-->
         <div id="copyright">
             <p>Designed by Phan Dũng Trí, Nguyễn Quốc Vũ, Nguyễn Đức Anh Tuấn</p>
