--- a/admin/remove-game.html
+++ b/admin/remove-game.html
@@ -26,7 +26,7 @@
     <script src="../script/product-tab.js"></script>
     <script src="../script/menu-bar.js"></script>
     <script src="../script/cart-description.js"></script>
-
+    <script src="script/login.js"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
             </div>
             <a href="#" class="pretty-anchor">Daily Deals</a>
             <a href="../feedback/feed-back.html" class="pretty-anchor">Feedback</a>
-            <a class="purple-btn" href="../account/user-login.html">Login</a>
+            <a id="login-btn" class="purple-btn" href="../account/admin-login.html">sign in</a>
         </div>
 
         <!--Burger Menu Icon-->
@@ -71,8 +71,8 @@
         </div>
 
         <!--Login Button (Desktop)-->
-        <a class="login-wrapper pretty-anchor" href="../account/user-login.html">
-            <div class="login-btn"><i class="fa fa-user"></i>Vu Nguyen</div>
+        <a class="login-wrapper pretty-anchor" href="../account/admin-login.html">
+            <div class="login-btn"><i class="fa fa-user"></i>sign in</div>
         </a>
     </header>
     <div class="body">
