Backing up Vu's process

--- a/admin/card-info.html
+++ b/admin/card-info.html
@@ -65,10 +65,10 @@
                                 <div class="edit-btn">edit</div>
                         </div>
 
-                <div class="button-wrapper">
-                    <div class="button">Save</div>
-                    <div class="button red">Cancel</div>
-                </div>
+                        <div class="button-wrapper">
+                            <div class="button">Save</div>
+                           <a href="list/cards-list.html"> <div class="button grey">Cancel</div></a>
+                        </div>
             </div>
             </div>
 </body>
