--- a/admin/game-info.html
+++ b/admin/game-info.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="button-wrapper">
                     <div class="button">Save</div>
-                    <div class="button red">Cancel</div>
+                   <a href="list/games-list.html"> <div class="button grey">Cancel</div></a>
                 </div>
             </div>
             </div>
