--- a/admin/orders-game.html
+++ b/admin/orders-game.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/remove-product.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/orders.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/new-orders.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../style/burger-menu.css" />
