create and add a number of products into category

--- a/product/Battlefield 1.html
+++ b/product/Battlefield 1.html
@@ -101,8 +101,8 @@
                 </div>
 
                 <!--Product Supported Platform-->
-                <div class="product-genre">Platform:
-                        <a class="pretty-anchor" href="#"><i class="fa fa-steam"></i></a>
+                <div class="product-genre">
+                    Platform: Origin
                 </div>
 
                 <!--Product Price-->
