--- a/product/Overwatch.html
+++ b/product/Overwatch.html
@@ -102,8 +102,8 @@
                 </div>
 
                 <!--Product Supported Platform-->
-                <div class="product-genre">Platform:
-                        <a class="pretty-anchor" href="#"><i class="fa fa-steam"></i></a>
+                <div class="product-genre">
+                    Platform: Battle.net
                 </div>
 
                 <!--Product Price-->
