--- a/product/StarCraft II-Campaign Collection Digital .html
+++ b/product/StarCraft II-Campaign Collection Digital .html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Battlefield V</title>
+    <title>StarCraft® II: Campaign Collection Digital Deluxe Edition</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
@@ -81,31 +81,33 @@
             <!--Product Image-->
             <div class="product-img-wrapper">
                 <div class="recent-img">
-                    <img src="https://images7.alphacoders.com/923/923038.png">
+                    <img src="images/sc.jpg">
                 </div>
                 <div class="img-wrapper">
-                    <img class="active" src="https://images8.alphacoders.com/922/922187.png">
-                    <img src="https://images4.alphacoders.com/922/922198.jpg">
-                    <img src="https://images7.alphacoders.com/927/927175.jpg">
-                    <img src="https://images.alphacoders.com/922/922194.png ">
+                    <img class="active" src="images/sc1.jpg">
+                    <img src="images/sc2.jpg">
+                    <img src="images/sc3.jpg">
+                    <img src="images/sc4.jpg">
                 </div>
             </div>
 
             <!--Product Name-->
-            <div class="product-name">Battlefield V </div>
+            <div class="product-name">StarCraft® II: Campaign Collection Digital Deluxe Edition</div>
 
             <div class="right-hand-side-wrapper"> <!--Right Hand Side Elements (Desktop)-->
                 <!--Product Genre-->
                 <div class="product-genre">Genre:
-                    <a class="small-btn" href="#">Action-adventure</a>
+                    <a class="small-btn" href="#">Action</a>
+                    <a class="small-btn" href="#">Fist shot</a>
                 </div>
 
                 <!--Product Supported Platform-->
-                <div class="product-genre">Platform: Origin
+                <div class="product-genre">
+                    Platform: Battle.net
                 </div>
 
                 <!--Product Price-->
-                <div class="product-price"><i class="fa fa-certificate"></i> 59.99$</div>
+                <div class="product-price"><i class="fa fa-certificate"></i> 34.90$</div>
                 
                 <!--Shopping Button-->
                 <div class="btn-wrapper">
@@ -122,15 +124,13 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Developer(s)   : EA DICE</li>
-                                <li>Publisher(s)   : Electronic Arts</li>
-                                <li>Producer(s)    : Aleksander Svendsen  </li>
-                                <li>Designer(s)    : Jörgen Carlström </li>
-                                <li>Programmer(s)  : Vidar Nygren</li>
-                                <li>Artist(s)      : Gustav Tilleby</li>
-                                <li>Writer(s)      : Steven Hall</li>
-                                <li>Composer(s)    : Patrik Andrén</li>
-                                <li>Series         : Battlefield</li>
+                                <li>Developer(s)   : Blizzard Entertainment</li>
+                                <li>Publisher(s)   : Blizzard Entertainment</li>
+                                <li>Producer(s)     : Jeffrey Kaplan</li>
+                                <li>Designer(s)     : Jeremy Craig</li>
+                                <li>Artist(s)            : Bill Petras</li>
+                                <li>Writer(s)           : Dan Houser</li>
+                                <li>Mode(s)            : Multiplayer</li>
 
                             </ul>
                         </div>
@@ -143,7 +143,7 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Battlefield V received positive reviews by critics and was seen as an improvement over the series' previous installments, Battlefield 4 and Battlefield Hardline. Most of the praise was directed towards its World War I theme, single-player campaigns, multiplayer modes, visuals, and sound design. It was a commercial success, selling over 15 million copies.[3][4] A sequel, Battlefield V, was announced on May 23, 2018 and was first going to be released on October 19, 2018 but was delayed to November 20.</li>
+                                <li>StarCraft® II: Campaign Collection Digital Deluxe Edition is a multi-player First-person Shooter (FPS) multiplayer game combined with the MOBA (Multiplayer Online Battle Arena) element developed and released by Blizzard Entertainment.</li>
                             </ul>
                          </div>
                     </div>
@@ -155,11 +155,11 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>OS: 64-bit Windows 7, Windows 8.1 , Windows 10</li>
-                                <li>Processor: AMD FX-6350</li>
-                                <li>Memory: 8 GB RAM</li>
-                                <li>Graphics: NVIDIA GTX 660 2GB</li>
-                                <li>Storage: 50 GB available space</li>
+                                <li>OS:Windows 8.1 64 Bit, Windows 8 64 Bit, Windows 7 64 Bit Service Pack 1, Windows Vista 64 Bit Service Pack 2* (*NVIDIA video card recommended if running Vista OS)</li>
+                                <li>Processor: : Intel® Core™ i3 or AMD Phenom™ X3 865</li>
+                                <li>Memory: 4 GB RAM</li>
+                                <li>Graphics: NVIDIA® GeForce® GTX 460, ATI Radeon™ HD 4850, or Intel® HD Graphics 4400</li>
+                                <li>Storage: 15 GB available space</li>
                             </ul>
                         </div>
                     </div>
@@ -170,48 +170,48 @@
             <div id="related-product-title" class="title"><i class="fa fa-share"></i> Related Products</div>
             <div class="related-product-wrapper">
                 <div class="related-product-container">
-                    <a class="related-product pretty-anchor" href="Counter-Strike Global Offensive.html">
-                        <img src="https://images3.alphacoders.com/570/570388.jpg">
-                        <div class="related-product-name">Counter-Strike Global Offensive </div>
-                        <div class="related-product-price">7.09$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="GTA_IV.html">
+                        <img src="..\product\images\gta-iv.jpg">
+                        <div class="related-product-name">Grand Theft Auto IV </div>
+                        <div class="related-product-price">19.99$<sup></sup></div>
+                    </a>
+                    <a class="related-product pretty-anchor" href="GTA_V.html">
+                            <img src="..\product\images\cc.jpg">
+                            <div class="related-product-name">Grand Theft Auto V</div>
+                            <div class="related-product-price">29.99$<sup></sup></div>
                     </a>
                     <a class="related-product pretty-anchor" href="PlayerUnknown's Battlegrounds.html">
                             <img src="..\product\images\pubg.jpg">
                             <div class="related-product-name">PlayerUnknown's Battlegrounds</div>
                             <div class="related-product-price">14.62$<sup></sup></div>
                     </a>
-                    <a class="related-product pretty-anchor" href="Battlefield 1.html">
-                            <img src="https://images5.alphacoders.com/699/699115.jpg">
-                            <div class="related-product-name">Battlefield 1</div>
-                            <div class="related-product-price">12.59$<sup></sup></div>
-                    </a>
-                    <a class="related-product pretty-anchor" href="Rocket League.html">
-                            <img src="https://images7.alphacoders.com/863/863540.jpg">
-                            <div class="related-product-name">Rocket League</div>
-                            <div class="related-product-price">8.08$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="Red Dead Redemption 2.html">
+                            <img src="https://images6.alphacoders.com/749/749806.png">
+                            <div class="related-product-name">Red Dead Redemption 2</div>
+                            <div class="related-product-price">59.99$<sup></sup></div>
                     </a>
                 </div>
             </div>
             <div class="related-product-card-container">
-                <a class="product-card" href="Counter-Strike Global Offensive.html">
-                        <img src="images/csgo.png">
-                        <div class="content-product-name">Counter-Strike Global Offensive</div>
-                        <div class="content-product-price">7.09$ <sup></sup></div>
+                <a class="product-card" href="GTA_IV.html">
+                        <img src="..\product\images\rsz_12gta-iv.jpg">
+                        <div class="content-product-name">Grand Theft Auto IV</div>
+                        <div class="content-product-price">19.99$ <sup></sup></div>
+                </a>
+                <a class="product-card" href="GTA_V.html">
+                        <img src="images/gtav.jpg">
+                        <div class="content-product-name">Grand Theft Auto V</div>
+                        <div class="content-product-price">29.99$ <sup></sup></div>
                 </a>
                 <a class="product-card" href="PlayerUnknown's Battlegrounds.html">
                         <img src="..\product\images\rsz_pubg.jpg">
                         <div class="content-product-name">PlayerUnknown's Battlegrounds</div>
                         <div class="content-product-price">14.62$ <sup></sup></div>
                 </a>
-                <a class="product-card" href="Battlefield 1.html">
-                        <img src="..\product\images\rsz_battle_field_1.jpg">
-                        <div class="content-product-name">Battle field 1</div>
-                        <div class="content-product-price">12.59$ <sup></sup></div>
-                </a>
-                <a class="product-card" href="Rocket League.html">
-                        <img src="https://cdn02.nintendo-europe.com/media/images/11_square_images/games_18/nintendo_switch_download_software/SQ_NSwitchDS_RocketLeague.jpg">
-                        <div class="content-product-name">Rocket League</div>
-                        <div class="content-product-price">8.08$ <sup></sup></div>
+                <a class="product-card" href="Red Dead Redemption 2.html">
+                        <img src="images/red-dead-2.jpg">
+                        <div class="content-product-name">Red Dead Redemption 2</div>
+                        <div class="content-product-price">59.99$ <sup></sup></div>
                 </a>
             </div>
         </div>
