--- a/product/Titanfall™ 2.html
+++ b/product/Titanfall™ 2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Battlefield V</title>
+    <title>Titanfall™ 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="../images/gamehublogo.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="../style/header.css" />
@@ -32,8 +32,8 @@
                 <a id="category" class="pretty-anchor">Category</a>
                 <div class="sub-menu">
                     <a href="../category/Steam.html" class="pretty-anchor">Steam Games</a>
-                <a href="../category/Origin.html" class="pretty-anchor">Origin Games</a>
-                <a href="../category/Battle.net.html" class="pretty-anchor">Battle.net Games</a>
+                    <a href="../category/Origin.html" class="pretty-anchor">Origin Games</a>
+                    <a href="../category/Battle.net.html" class="pretty-anchor">Battle.net Games</a>
                 </div>
                 <a href="#" class="pretty-anchor">Daily Deals</a>
                 <a href="../feedback/feed-back.html" class="pretty-anchor">Feedback</a>
@@ -43,7 +43,7 @@
             <!--Burger Menu Icon-->
             <div class="burger-menu-icon">
                 <div class="burger"></div>  
-              </div>
+            </div>
     
             <!--Website Logo-->
             <div class="logo">
@@ -81,18 +81,18 @@
             <!--Product Image-->
             <div class="product-img-wrapper">
                 <div class="recent-img">
-                    <img src="https://images7.alphacoders.com/923/923038.png">
+                    <img src="https://images2.alphacoders.com/716/716179.png">
                 </div>
                 <div class="img-wrapper">
-                    <img class="active" src="https://images8.alphacoders.com/922/922187.png">
-                    <img src="https://images4.alphacoders.com/922/922198.jpg">
-                    <img src="https://images7.alphacoders.com/927/927175.jpg">
-                    <img src="https://images.alphacoders.com/922/922194.png ">
+                    <img class="active" src="https://images5.alphacoders.com/726/726634.jpg">
+                    <img src="https://images6.alphacoders.com/726/726978.jpg">
+                    <img src="https://images2.alphacoders.com/869/869852.png">
+                    <img src="https://images3.alphacoders.com/806/806107.jpg">
                 </div>
             </div>
 
             <!--Product Name-->
-            <div class="product-name">Battlefield V </div>
+            <div class="product-name">Titanfall™ 2</div>
 
             <div class="right-hand-side-wrapper"> <!--Right Hand Side Elements (Desktop)-->
                 <!--Product Genre-->
@@ -101,11 +101,12 @@
                 </div>
 
                 <!--Product Supported Platform-->
-                <div class="product-genre">Platform: Origin
+                <div class="product-genre">
+                    Platform: Origin    
                 </div>
 
                 <!--Product Price-->
-                <div class="product-price"><i class="fa fa-certificate"></i> 59.99$</div>
+                <div class="product-price"><i class="fa fa-certificate"></i> 34.90$</div>
                 
                 <!--Shopping Button-->
                 <div class="btn-wrapper">
@@ -143,9 +144,9 @@
                     <div class="description">
                         <div>
                             <ul>
-                                <li>Battlefield V received positive reviews by critics and was seen as an improvement over the series' previous installments, Battlefield 4 and Battlefield Hardline. Most of the praise was directed towards its World War I theme, single-player campaigns, multiplayer modes, visuals, and sound design. It was a commercial success, selling over 15 million copies.[3][4] A sequel, Battlefield V, was announced on May 23, 2018 and was first going to be released on October 19, 2018 but was delayed to November 20.</li>
+                                <li>none</li>
                             </ul>
-                         </div>
+                        </div>
                     </div>
                 </div>
 
@@ -180,10 +181,10 @@
                             <div class="related-product-name">PlayerUnknown's Battlegrounds</div>
                             <div class="related-product-price">14.62$<sup></sup></div>
                     </a>
-                    <a class="related-product pretty-anchor" href="Battlefield 1.html">
-                            <img src="https://images5.alphacoders.com/699/699115.jpg">
-                            <div class="related-product-name">Battlefield 1</div>
-                            <div class="related-product-price">12.59$<sup></sup></div>
+                    <a class="related-product pretty-anchor" href="Battlefield V.html">
+                            <img src="https://images7.alphacoders.com/923/923038.png">
+                            <div class="related-product-name">Battlefield V</div>
+                            <div class="related-product-price">59.99$<sup></sup></div>
                     </a>
                     <a class="related-product pretty-anchor" href="Rocket League.html">
                             <img src="https://images7.alphacoders.com/863/863540.jpg">
@@ -203,10 +204,10 @@
                         <div class="content-product-name">PlayerUnknown's Battlegrounds</div>
                         <div class="content-product-price">14.62$ <sup></sup></div>
                 </a>
-                <a class="product-card" href="Battlefield 1.html">
-                        <img src="..\product\images\rsz_battle_field_1.jpg">
-                        <div class="content-product-name">Battle field 1</div>
-                        <div class="content-product-price">12.59$ <sup></sup></div>
+                <a class="product-card" href="Battlefield V.html">
+                        <img src="images/btV.jpg">
+                        <div class="content-product-name">Battle field V</div>
+                        <div class="content-product-price">59.99$ <sup></sup></div>
                 </a>
                 <a class="product-card" href="Rocket League.html">
                         <img src="https://cdn02.nintendo-europe.com/media/images/11_square_images/games_18/nintendo_switch_download_software/SQ_NSwitchDS_RocketLeague.jpg">
