--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="category/Origin.html" class="pretty-anchor">Origin Games</a>
                 <a href="category/Battle.net.html" class="pretty-anchor">Battle.net Games</a>
             </div>
-            <a href="#" class="pretty-anchor">Daily Deals</a>
+            <a href="product/Insurgency.html" class="pretty-anchor">Daily Deals</a>
             <a href="feedback/feed-back.html" class="pretty-anchor">Feedback</a>
             <a id="login-btn" class="purple-btn" href="account/user-login.html">Login</a>
         </div>
@@ -106,8 +106,8 @@
                         <div class="caption-text">Ghost Recon</div>
                     </a>
             
-                    <a class="prev-btn">&#10094;</a>
-                    <a class ="next-btn">&#10095;</a>
+                    <a class="prev-btn">&#60</a>
+                    <a class ="next-btn">&#62</a>
                 </div>
                 <div class="dot-btn">
                     <span class="dot"></span>
@@ -194,7 +194,7 @@
                         <div class="content-product-price">6.88$ <sup></sup></div>
                     </a>
 
-                    <a class="view-more-btn" id="view-more-pop" href="#">View More</a>
+                    <a class="view-more-btn" id="view-more-pop" href="category/popular.html">View More</a>
                 </div>
 
                 <div class="tab-content" id="newest">
@@ -229,7 +229,7 @@
                         <div class="content-product-price">21.72$ <sup></sup></div>
                     </a>
 
-                    <a class="view-more-btn" id="view-more-new" href="#">View More</a>
+                    <a class="view-more-btn" id="view-more-new" href="category/newest.html">View More</a>
                 </div>
             </div>
         </div>
