--- a/product/Divinity Original Sin II.html
+++ b/product/Divinity Original Sin II.html
@@ -35,7 +35,7 @@
                 <a href="../category/Origin.html" class="pretty-anchor">Origin Games</a>
                 <a href="../category/Battle.net.html" class="pretty-anchor">Battle.net Games</a>
                 </div>
-                <a href="#" class="pretty-anchor">Daily Deals</a>
+                <a href="../product/Insurgency.html" class="pretty-anchor">Daily Deals</a>
                 <a href="../feedback/feed-back.html" class="pretty-anchor">Feedback</a>
                 <a id="login-btn" class="purple-btn" href="../account/user-login.html">Login</a>
             </div>
