--- a/admin/list/all-orders-game.html
+++ b/admin/list/all-orders-game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>All Orders of Game</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -45,7 +45,7 @@
             <td>Vu Nguyen</td>
             <td>25/12/2018 19:52:12</td>
             <td>Processing</td>
-            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
+            <td><a href="../details/all-orders-info.html"><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">002</th>
@@ -54,7 +54,7 @@
             <td>Tuan Nguyen</td>
             <td>25/12/2018 19:50:12</td>
             <td>Processing</td>
-            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
+            <td><a href="../details/all-orders-info.html"><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">003</th>
@@ -63,7 +63,7 @@
             <td>Tri Phan</td>
             <td>25/12/2018 19:42:42</td>
             <td>On list</td>
-            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
+            <td><a href="../details/all-orders-info.html"><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">004</th>
@@ -72,7 +72,7 @@
             <td>Bao Nguyen</td>
             <td>25/12/2018 18:12:12</td>
             <td>On list</td>
-            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
+            <td><a href="../details/all-orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">005</th>
@@ -81,7 +81,7 @@
             <td>Vu Nguyen</td>
             <td>25/12/2018 19:52:12</td>
             <td>On list</td>
-            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
+            <td><a href="../details/all-orders-info.html"><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
               <th scope="row">006</th>
@@ -90,7 +90,7 @@
               <td>Tuan Nguyen</td>
               <td>25/12/2018 19:50:12</td>
               <td>Processing</td>
-              <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
+              <td><a href="../details/all-orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">007</th>
@@ -99,7 +99,7 @@
             <td>Vu Nguyen</td>
             <td>25/12/2018 19:52:12</td>
             <td>Processing</td>
-            <td><a href="../orders-info.html "><button type="button" class="btn btn-primary">Info</button></a></td>
+            <td><a href="../details/all-orders-info.html"><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
           <tr>
             <th scope="row">008</th>
@@ -108,7 +108,7 @@
             <td>Vu Nguyen</td>
             <td>25/12/2018 19:52:12</td>
             <td>Processing</td>
-            <td><a href="../orders-info.html "></a><button type="button" class="btn btn-primary">Info</button></a></td>
+             <td><a href="../details/all-orders-info.html"><button type="button" class="btn btn-primary">Info</button></a></td>
           </tr>
         </tbody>
       </table>
