--- a/admin/add-game.html
+++ b/admin/add-game.html
@@ -80,7 +80,7 @@
                 <a class="list-box" href="dashboard-game.html">Dashboard</a>
                 <a class="list-box main" href="add-game.html">Add Product</a>
                 <a class="list-box" href="remove-game.html">Remove/<br>Edit Product</a>
-                <a class="list-box" href="#">Orders</a>
+                <a class="list-box" href="orders.html">Orders</a>
             </div>
             <div class="info">
                <div class="add-product-title"> 
